--- a/Data/Localization/Hotkeys/Actions/hotkeys_standard_aa.txt
+++ b/Data/Localization/Hotkeys/Actions/hotkeys_standard_aa.txt
@@ -190,7 +190,7 @@ map a game|action|verify "ActorDataSelectCommand gbr_bunker_aa"
 map r game|action|verify "ActorDataSelectCommand gbr_bunker_artillery"
 
 # Corps HQ
-#map p game|action|verify "ActorDataSelectCommand gbr_truck_corps"
+map p game|action|verify "ActorDataSelectCommand gbr_truck_corps"
 map f game|action|verify "ActorDataSelectCommand gbr_truck_airfield"
 map r game|action|verify "ActorDataSelectCommand gbr_truck_artillery"
 map e game|action|verify "ActorDataSelectCommand gbr_truck_engineer"
@@ -265,7 +265,7 @@ map a game|action|verify "ActorDataSelectCommand ger_bunker_aa"
 map r game|action|verify "ActorDataSelectCommand ger_bunker_artillery"
 
 # Corps HQ
-#map p game|action|verify "ActorDataSelectCommand ger_truck_corps"
+map p game|action|verify "ActorDataSelectCommand ger_truck_corps"
 map f game|action|verify "ActorDataSelectCommand ger_truck_airfield"
 map r game|action|verify "ActorDataSelectCommand ger_truck_artillery"
 map e game|action|verify "ActorDataSelectCommand ger_truck_engineer"
@@ -339,7 +339,7 @@ map a game|action|verify "ActorDataSelectCommand jpn_bunker_aa"
 map r game|action|verify "ActorDataSelectCommand jpn_bunker_artillery"
 
 # Corps HQ
-#map p game|action|verify "ActorDataSelectCommand jpn_truck_corps"
+map p game|action|verify "ActorDataSelectCommand jpn_truck_corps"
 map f game|action|verify "ActorDataSelectCommand jpn_truck_airfield"
 map r game|action|verify "ActorDataSelectCommand jpn_truck_artillery"
 map e game|action|verify "ActorDataSelectCommand jpn_truck_engineer"
@@ -414,7 +414,7 @@ map a game|action|verify "ActorDataSelectCommand rus_bunker_aa"
 map r game|action|verify "ActorDataSelectCommand rus_bunker_artillery"
 
 # Corps HQ
-#map p game|action|verify "ActorDataSelectCommand rus_truck_corps"
+map p game|action|verify "ActorDataSelectCommand rus_truck_corps"
 map f game|action|verify "ActorDataSelectCommand rus_truck_airfield"
 map r game|action|verify "ActorDataSelectCommand rus_truck_artillery"
 map e game|action|verify "ActorDataSelectCommand rus_truck_engineer"
@@ -489,7 +489,7 @@ map a game|action|verify "ActorDataSelectCommand usa_bunker_aa"
 map r game|action|verify "ActorDataSelectCommand usa_bunker_artillery"
 
 # Corps HQ
-#map p game|action|verify "ActorDataSelectCommand usa_truck_corps"
+map p game|action|verify "ActorDataSelectCommand usa_truck_corps"
 map f game|action|verify "ActorDataSelectCommand usa_truck_airfield"
 map r game|action|verify "ActorDataSelectCommand usa_truck_artillery"
 map e game|action|verify "ActorDataSelectCommand usa_truck_engineer"
