--- a/Data/Localization/Hotkeys/Actions/hotkeys_standard_aa.txt
+++ b/Data/Localization/Hotkeys/Actions/hotkeys_standard_aa.txt
@@ -218,6 +218,7 @@ map s game|action|verify "ActorDataSelectCommand gbr_truck_bunker_artillery"
 # Infantry HQ
 map o game|action|verify "ActorDataSelectCommand regiment_gbr_infantry_recon"
 map i game|action|verify "ActorDataSelectCommand regiment_gbr_infantry"
+map f game|action|verify "ActorDataSelectCommand regiment_gbr_infantry_def"
 map a game|action|verify "ActorDataSelectCommand regiment_gbr_infantry_aa"
 map r game|action|verify "ActorDataSelectCommand regiment_gbr_infantry_artillery"
 map t game|action|verify "ActorDataSelectCommand regiment_gbr_infantry_at"
@@ -294,6 +295,7 @@ map s game|action|verify "ActorDataSelectCommand ger_truck_bunker_artillery"
 map o game|action|verify "ActorDataSelectCommand regiment_ger_infantry_recon"
 map e game|action|verify "ActorDataSelectCommand regiment_ger_engineer"
 map i game|action|verify "ActorDataSelectCommand regiment_ger_infantry"
+map f game|action|verify "ActorDataSelectCommand regiment_ger_infantry_def"
 map a game|action|verify "ActorDataSelectCommand regiment_ger_infantry_aa"
 map r game|action|verify "ActorDataSelectCommand regiment_ger_infantry_artillery"
 map t game|action|verify "ActorDataSelectCommand regiment_ger_infantry_at" 
@@ -368,6 +370,7 @@ map s game|action|verify "ActorDataSelectCommand jpn_truck_bunker_artillery"
 map o game|action|verify "ActorDataSelectCommand regiment_jpn_infantry_recon"
 map e game|action|verify "ActorDataSelectCommand regiment_jpn_engineer"
 map i game|action|verify "ActorDataSelectCommand regiment_jpn_infantry"
+map f game|action|verify "ActorDataSelectCommand regiment_jpn_infantry_def"
 map a game|action|verify "ActorDataSelectCommand regiment_jpn_infantry_aa"
 map r game|action|verify "ActorDataSelectCommand regiment_jpn_infantry_artillery"
 map t game|action|verify "ActorDataSelectCommand regiment_jpn_infantry_at"
@@ -444,6 +447,7 @@ map o game|action|verify "ActorDataSelectCommand regiment_rus_infantry_recon"
 map p game|action|verify "ActorDataSelectCommand regiment_rus_conscript"
 map e game|action|verify "ActorDataSelectCommand regiment_rus_engineer"
 map i game|action|verify "ActorDataSelectCommand regiment_rus_infantry"
+map f game|action|verify "ActorDataSelectCommand regiment_rus_infantry_def"
 map a game|action|verify "ActorDataSelectCommand regiment_rus_infantry_aa"
 map r game|action|verify "ActorDataSelectCommand regiment_rus_infantry_artillery"
 map t game|action|verify "ActorDataSelectCommand regiment_rus_infantry_at"
@@ -518,10 +522,11 @@ map s game|action|verify "ActorDataSelectCommand usa_truck_bunker_artillery"
 map o game|action|verify "ActorDataSelectCommand regiment_usa_infantry_recon"
 map e game|action|verify "ActorDataSelectCommand regiment_usa_engineer"
 map i game|action|verify "ActorDataSelectCommand regiment_usa_infantry"
+map f game|action|verify "ActorDataSelectCommand regiment_usa_infantry_def"
 map a game|action|verify "ActorDataSelectCommand regiment_usa_infantry_aa"
 map r game|action|verify "ActorDataSelectCommand regiment_usa_infantry_artillery"
 map t game|action|verify "ActorDataSelectCommand regiment_usa_infantry_at"
-map f game|action|verify "ActorDataSelectCommand regiment_usa_infantry_flame"
+map p game|action|verify "ActorDataSelectCommand regiment_usa_infantry_flame"
 map i game|action|verify "ActorDataSelectCommand regiment_usa_infantry_armored"
 map a game|action|verify "ActorDataSelectCommand regiment_usa_infantry_assault"
 
