--- a/Data/Localization/Hotkeys/Actions/hotkeys_standard_aa.txt
+++ b/Data/Localization/Hotkeys/Actions/hotkeys_standard_aa.txt
@@ -177,6 +177,7 @@ map t game|action|verify "PropertyDataSelectCommand tech_tank_production"
 ###############################
 
 map s game|action|verify "ActorDataSelectCommand bunker_recon"
+map s game|action|verify "ActorDataSelectCommand regiment_nuclear"
 
 ### Nation - Britain
 
@@ -205,6 +206,7 @@ map z game|action|verify "ActorDataSelectCommand regiment_gbr_hq_mechanized_unpa
 map b game|action|verify "ActorDataSelectCommand regiment_gbr_hq_airborne"
 map b game|action|verify "ActorDataSelectCommand regiment_gbr_hq_airborne_unpacked"
 map s game|action|verify "ActorDataSelectCommand gbr_truck_supply"
+map s game|action|verify "ActorDataSelectCommand gbr_truck_supply_large"
 map s game|action|verify "ActorDataSelectCommand gbr_truck_money"
 map m game|action|verify "ActorDataSelectCommand gbr_truck_ammo"
 map o game|action|verify "ActorDataSelectCommand gbr_truck_oil"
@@ -219,6 +221,7 @@ map s game|action|verify "ActorDataSelectCommand gbr_truck_bunker_artillery"
 # Infantry HQ
 map o game|action|verify "ActorDataSelectCommand regiment_gbr_infantry_recon"
 map i game|action|verify "ActorDataSelectCommand regiment_gbr_infantry"
+map p game|action|verify "ActorDataSelectCommand regiment_gbr_infantry_sp"
 map f game|action|verify "ActorDataSelectCommand regiment_gbr_infantry_def"
 map a game|action|verify "ActorDataSelectCommand regiment_gbr_infantry_aa"
 map r game|action|verify "ActorDataSelectCommand regiment_gbr_infantry_artillery"
@@ -282,6 +285,7 @@ map z game|action|verify "ActorDataSelectCommand regiment_ger_hq_mechanized_unpa
 map b game|action|verify "ActorDataSelectCommand regiment_ger_hq_airborne"
 map b game|action|verify "ActorDataSelectCommand regiment_ger_hq_airborne_unpacked"
 map s game|action|verify "ActorDataSelectCommand ger_truck_supply"
+map s game|action|verify "ActorDataSelectCommand ger_truck_supply_large"
 map s game|action|verify "ActorDataSelectCommand ger_truck_money"
 map m game|action|verify "ActorDataSelectCommand ger_truck_ammo"
 map o game|action|verify "ActorDataSelectCommand ger_truck_oil"
@@ -297,6 +301,7 @@ map s game|action|verify "ActorDataSelectCommand ger_truck_bunker_artillery"
 map o game|action|verify "ActorDataSelectCommand regiment_ger_infantry_recon"
 map e game|action|verify "ActorDataSelectCommand regiment_ger_engineer"
 map i game|action|verify "ActorDataSelectCommand regiment_ger_infantry"
+map p game|action|verify "ActorDataSelectCommand regiment_ger_infantry_sp"
 map f game|action|verify "ActorDataSelectCommand regiment_ger_infantry_def"
 map a game|action|verify "ActorDataSelectCommand regiment_ger_infantry_aa"
 map r game|action|verify "ActorDataSelectCommand regiment_ger_infantry_artillery"
@@ -358,6 +363,7 @@ map z game|action|verify "ActorDataSelectCommand regiment_jpn_hq_mechanized_unpa
 map b game|action|verify "ActorDataSelectCommand regiment_jpn_hq_airborne"
 map b game|action|verify "ActorDataSelectCommand regiment_jpn_hq_airborne_unpacked"
 map s game|action|verify "ActorDataSelectCommand jpn_truck_supply"
+map s game|action|verify "ActorDataSelectCommand jpn_truck_supply_large"
 map s game|action|verify "ActorDataSelectCommand jpn_truck_money"
 map m game|action|verify "ActorDataSelectCommand jpn_truck_ammo"
 map o game|action|verify "ActorDataSelectCommand jpn_truck_oil"
@@ -373,6 +379,7 @@ map s game|action|verify "ActorDataSelectCommand jpn_truck_bunker_artillery"
 map o game|action|verify "ActorDataSelectCommand regiment_jpn_infantry_recon"
 map e game|action|verify "ActorDataSelectCommand regiment_jpn_engineer"
 map i game|action|verify "ActorDataSelectCommand regiment_jpn_infantry"
+map p game|action|verify "ActorDataSelectCommand regiment_jpn_infantry_sp"
 map f game|action|verify "ActorDataSelectCommand regiment_jpn_infantry_def"
 map a game|action|verify "ActorDataSelectCommand regiment_jpn_infantry_aa"
 map r game|action|verify "ActorDataSelectCommand regiment_jpn_infantry_artillery"
@@ -435,6 +442,7 @@ map z game|action|verify "ActorDataSelectCommand regiment_rus_hq_mechanized_unpa
 map b game|action|verify "ActorDataSelectCommand regiment_rus_hq_airborne"
 map b game|action|verify "ActorDataSelectCommand regiment_rus_hq_airborne_unpacked"
 map s game|action|verify "ActorDataSelectCommand rus_truck_supply"
+map s game|action|verify "ActorDataSelectCommand rus_truck_supply_large"
 map s game|action|verify "ActorDataSelectCommand rus_truck_money"
 map m game|action|verify "ActorDataSelectCommand rus_truck_ammo"
 map o game|action|verify "ActorDataSelectCommand rus_truck_oil"
@@ -448,9 +456,10 @@ map s game|action|verify "ActorDataSelectCommand rus_truck_bunker_artillery"
 
 # Infantry HQ
 map o game|action|verify "ActorDataSelectCommand regiment_rus_infantry_recon"
-map p game|action|verify "ActorDataSelectCommand regiment_rus_conscript"
+map c game|action|verify "ActorDataSelectCommand regiment_rus_conscript"
 map e game|action|verify "ActorDataSelectCommand regiment_rus_engineer"
 map i game|action|verify "ActorDataSelectCommand regiment_rus_infantry"
+map p game|action|verify "ActorDataSelectCommand regiment_rus_infantry_sp"
 map f game|action|verify "ActorDataSelectCommand regiment_rus_infantry_def"
 map a game|action|verify "ActorDataSelectCommand regiment_rus_infantry_aa"
 map r game|action|verify "ActorDataSelectCommand regiment_rus_infantry_artillery"
@@ -512,6 +521,7 @@ map z game|action|verify "ActorDataSelectCommand regiment_usa_hq_mechanized_unpa
 map b game|action|verify "ActorDataSelectCommand regiment_usa_hq_airborne"
 map b game|action|verify "ActorDataSelectCommand regiment_usa_hq_airborne_unpacked"
 map s game|action|verify "ActorDataSelectCommand usa_truck_supply"
+map s game|action|verify "ActorDataSelectCommand usa_truck_supply_large"
 map s game|action|verify "ActorDataSelectCommand usa_truck_money"
 map m game|action|verify "ActorDataSelectCommand usa_truck_ammo"
 map o game|action|verify "ActorDataSelectCommand usa_truck_oil"
@@ -527,11 +537,12 @@ map s game|action|verify "ActorDataSelectCommand usa_truck_bunker_artillery"
 map o game|action|verify "ActorDataSelectCommand regiment_usa_infantry_recon"
 map e game|action|verify "ActorDataSelectCommand regiment_usa_engineer"
 map i game|action|verify "ActorDataSelectCommand regiment_usa_infantry"
+map p game|action|verify "ActorDataSelectCommand regiment_usa_infantry_sp"
 map f game|action|verify "ActorDataSelectCommand regiment_usa_infantry_def"
 map a game|action|verify "ActorDataSelectCommand regiment_usa_infantry_aa"
 map r game|action|verify "ActorDataSelectCommand regiment_usa_infantry_artillery"
 map t game|action|verify "ActorDataSelectCommand regiment_usa_infantry_at"
-map p game|action|verify "ActorDataSelectCommand regiment_usa_infantry_flame"
+map c game|action|verify "ActorDataSelectCommand regiment_usa_infantry_flame"
 map i game|action|verify "ActorDataSelectCommand regiment_usa_infantry_armored"
 map a game|action|verify "ActorDataSelectCommand regiment_usa_infantry_assault"
 
